--- a/bestcardgameever-android/Branches/Yaniv For Android/res/layout/scores_view.xml
+++ b/bestcardgameever-android/Branches/Yaniv For Android/res/layout/scores_view.xml
@@ -3,7 +3,8 @@
 	android:id="@+id/scoresDialogMainView"
 	android:orientation="vertical"
 	android:layout_width="fill_parent"
-	 android:layout_height="fill_parent">
+	 android:layout_height="fill_parent"
+	 >
 	<GridView 
 		android:id="@+id/gridview" 
 		android:layout_width="fill_parent"
@@ -11,7 +12,6 @@
 		android:stretchMode="columnWidth" 
 		android:gravity="center_vertical|center_horizontal"
 		android:selectable="false"
-		
 		/>
 	<LinearLayout
 		android:layout_width="fill_parent"
