--- a/bestcardgameever-android/Branches/Yaniv For Android/res/layout/table.xml
+++ b/bestcardgameever-android/Branches/Yaniv For Android/res/layout/table.xml
@@ -5,8 +5,8 @@
 	android:background="#ffffff">
 	<!-- Top marquee -->
 	<LinearLayout android:background="#000000"
-		android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_weight="6.0"
-		android:id="@+id/heading">
+		android:layout_height="wrap_content" android:layout_width="fill_parent"
+		android:layout_weight="6.0" android:id="@+id/heading">
 		<TextView android:id="@+id/headingText" android:text="@string/Heading"
 			android:textColor="#ffffff" android:layout_height="fill_parent"
 			android:layout_width="fill_parent" android:ellipsize="marquee"
@@ -18,57 +18,66 @@
 	<!-- Table Container -->
 	<LinearLayout android:background="@drawable/risingtree"
 		android:layout_height="wrap_content" android:orientation="vertical"
-		android:layout_weight="94.0" android:weightSum="100.0" android:layout_width="fill_parent">
+		android:layout_weight="94.0" android:weightSum="100.0"
+		android:layout_width="fill_parent">
 
 		<!-- Top Opponent -->
-		<LinearLayout android:id="@+id/topRow"
-			android:background="#ff0000" android:layout_width="fill_parent" android:layout_height="0px" android:layout_weight="15.">
-			<TextView android:id="@+id/o2Name" android:layout_width="fill_parent"
-				android:layout_height="wrap_content" android:text="@string/Opponent2"
-				android:gravity="center_horizontal" />
-			<ImageView android:id="@+id/o2c1" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:layout_gravity="center">
-			</ImageView>
-			<ImageView android:id="@+id/o2c2" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:layout_gravity="center">
-			</ImageView>
-			<ImageView android:id="@+id/o2c3" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:layout_gravity="center">
-			</ImageView>
-			<ImageView android:id="@+id/o2c4" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:layout_gravity="center">
-			</ImageView>
-			<ImageView android:id="@+id/o2c5" android:layout_width="wrap_content"
-				android:layout_height="wrap_content" android:layout_gravity="center">
-			</ImageView>
+		<LinearLayout android:layout_width="fill_parent"
+			android:layout_height="0px" android:layout_weight="20" 
+			android:padding="1dip" android:orientation="vertical"
+			android:layout_gravity="center_horizontal" >
+			<TextView android:id="@+id/o2Name" android:layout_height="wrap_content" android:text="@string/Opponent2" android:layout_gravity="center" android:layout_width="wrap_content"/>
+			<LinearLayout android:id="@+id/topRow"
+				android:layout_height="wrap_content"
+				
+				android:background="#ff0000" android:layout_width="wrap_content" android:layout_gravity="center">
+				<ImageView android:id="@+id/o2c1" android:layout_width="wrap_content"
+					android:layout_height="wrap_content" >
+				</ImageView>
+				<ImageView android:id="@+id/o2c2" android:layout_width="wrap_content"
+					android:layout_height="wrap_content" >
+				</ImageView>
+				<ImageView android:id="@+id/o2c3" android:layout_width="wrap_content"
+					android:layout_height="wrap_content" >
+				</ImageView>
+				<ImageView android:id="@+id/o2c4" android:layout_width="wrap_content"
+					android:layout_height="wrap_content" >
+				</ImageView>
+				<ImageView android:id="@+id/o2c5" android:layout_width="wrap_content"
+					android:layout_height="wrap_content" >
+				</ImageView>
+			</LinearLayout>
 		</LinearLayout>
 
 		<!-- Mid-section -->
 		<LinearLayout android:background="#00ff00"
 			android:layout_width="fill_parent" android:orientation="horizontal"
-			android:weightSum="100" android:layout_height="0px" android:layout_weight="65">
+			android:weightSum="100" android:layout_height="0px"
+			android:layout_weight="55">
 			<!-- left opponent -->
 			<LinearLayout android:id="@+id/leftCol"
 				android:orientation="vertical" android:background="#ffffff"
-				android:layout_height="fill_parent" android:layout_weight="17.5" android:layout_width="0px">
+				android:layout_height="fill_parent" android:layout_weight="17.5"
+				android:layout_width="0px" android:padding="4dip"
+				android:layout_gravity="center">
 				<TextView android:id="@+id/o1Name" android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:text="@string/Opponent1"
-					android:layout_gravity="left" />
+					android:layout_gravity="top" />
 
 				<ImageView android:id="@+id/o1c1" android:layout_width="wrap_content"
 					android:layout_height="wrap_content">
 				</ImageView>
 				<ImageView android:id="@+id/o1c2" android:layout_width="wrap_content"
-					android:layout_height="wrap_content">
+					android:layout_height="wrap_content" android:layout_marginTop="-30px">
 				</ImageView>
 				<ImageView android:id="@+id/o1c3" android:layout_width="wrap_content"
-					android:layout_height="wrap_content">
+					android:layout_height="wrap_content" android:layout_marginTop="-30px">
 				</ImageView>
 				<ImageView android:id="@+id/o1c4" android:layout_width="wrap_content"
-					android:layout_height="wrap_content">
+					android:layout_height="wrap_content" android:layout_marginTop="-30px">
 				</ImageView>
 				<ImageView android:id="@+id/o1c5" android:layout_width="wrap_content"
-					android:layout_height="wrap_content">
+					android:layout_height="wrap_content" android:layout_marginTop="-30px">
 				</ImageView>
 
 
@@ -76,15 +85,16 @@
 			<!-- Deck and discarded -->
 			<LinearLayout android:id="@+id/center"
 				android:background="#00cccc" android:layout_height="fill_parent"
-				android:orientation="vertical" android:layout_weight="65" android:layout_width="0px">
+				android:orientation="vertical" android:layout_weight="65"
+				android:layout_width="0px">
 				<ImageView android:id="@+id/deck" android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:src="@drawable/deck"
-					android:paddingRight="15px" />
+					android:padding="10px" />
 
 
 				<LinearLayout android:id="@+id/cardsThrown"
-					android:layout_toRightOf="@+id/deck" android:layout_height="96px"
-					android:layout_width="130px">
+					android:layout_height="wrap_content" android:layout_width="fill_parent"
+					android:padding="5px">
 
 					<ImageView android:layout_width="72px"
 						android:layout_height="96px" android:id="@+id/card5" />
@@ -108,45 +118,49 @@
 			<!-- right opponent -->
 			<LinearLayout android:id="@+id/rightCol"
 				android:orientation="vertical" android:background="#000000"
-				android:layout_height="fill_parent" android:layout_weight="17.5" android:layout_width="0px">
+				android:layout_height="fill_parent" android:layout_weight="17.5"
+				android:layout_width="0px" android:padding="4dip"
+				android:layout_gravity="center">
 				<TextView android:id="@+id/o3Name" android:layout_width="wrap_content"
 					android:layout_height="wrap_content" android:text="@string/Opponent3"
-					android:layout_gravity="right" />
+					android:layout_gravity="top" />
 				<ImageView android:id="@+id/o3c1" android:layout_width="wrap_content"
 					android:layout_height="wrap_content">
 				</ImageView>
 				<ImageView android:id="@+id/o3c2" android:layout_width="wrap_content"
-					android:layout_height="wrap_content">
+					android:layout_height="wrap_content" android:layout_marginTop="-30px">
 				</ImageView>
 				<ImageView android:id="@+id/o3c3" android:layout_width="wrap_content"
-					android:layout_height="wrap_content">
+					android:layout_height="wrap_content" android:layout_marginTop="-30px">
 				</ImageView>
 				<ImageView android:id="@+id/o3c4" android:layout_width="wrap_content"
-					android:layout_height="wrap_content">
+					android:layout_height="wrap_content" android:layout_marginTop="-30px">
 				</ImageView>
 				<ImageView android:id="@+id/o3c5" android:layout_width="wrap_content"
-					android:layout_height="wrap_content">
+					android:layout_height="wrap_content" android:layout_marginTop="-30px">
 				</ImageView>
 			</LinearLayout>
 		</LinearLayout>
 
 		<!-- Bottom Player -->
 		<LinearLayout android:id="@+id/bottom"
-			android:background="#0000ff" android:layout_width="fill_parent" android:orientation="vertical"
-			android:weightSum="100" android:layout_weight="20" android:layout_height="0px">
+			android:background="#0000ff" android:layout_width="fill_parent"
+			android:orientation="vertical" android:weightSum="100"
+			android:layout_weight="25" android:layout_height="0px">
 			<TextView android:id="@+id/p1Name" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:text="@string/Player"
-				android:layout_gravity="left|center_vertical" android:background="#00ff00"
+				android:layout_gravity="center" android:background="#00ff00"
 				android:layout_weight="7" />
 
 			<!-- review this content -->
 			<TableLayout android:id="@+id/p1CardsAndActionButtonContainer"
-				android:orientation="horizontal"
-				android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="93">
+				android:orientation="horizontal" android:layout_width="fill_parent"
+				android:layout_height="wrap_content" android:layout_weight="93">
 				<TableRow android:layout_height="wrap_content">
 					<LinearLayout android:id="@+id/p1cardscontainer"
-						android:layout_width="wrap_content" android:layout_gravity="left"
-						android:gravity="left" android:layout_height="70px">
+						android:layout_width="wrap_content" android:layout_gravity="center"
+						android:layout_height="70px"
+						android:paddingLeft="4dip">
 
 						<ImageView android:id="@+id/p1c1" android:layout_height="@dimen/cardHeight"
 							android:layout_width="@dimen/cardWidth" android:layout_gravity="bottom"
@@ -171,9 +185,9 @@
 
 					</LinearLayout>
 					<LinearLayout android:id="@+id/ActionButtonContainer"
-						android:clipChildren="true"
-						android:gravity="right" android:layout_gravity="right"
-						android:layout_width="75px" android:orientation="vertical" android:layout_height="fill_parent">
+						android:clipChildren="true" android:gravity="right"
+						android:layout_gravity="right" android:layout_width="75px"
+						android:orientation="vertical" android:layout_height="fill_parent">
 
 						<Button android:layout_width="wrap_content"
 							android:layout_height="wrap_content" android:text="@string/PerformYaniv"
