--- a/bestcardgameever-android/Branches/Yaniv For Android/res/layout/yaniv_basic_dialog.xml
+++ b/bestcardgameever-android/Branches/Yaniv For Android/res/layout/yaniv_basic_dialog.xml
@@ -7,7 +7,7 @@ android:layout_height="wrap_content"
 android:orientation="vertical"
 >
 	<TextView 
-	android:id="@+id/textPuki"
+	android:id="@+id/dialogTv1"
 	android:layout_gravity="center_horizontal"
     android:layout_width="wrap_content" android:layout_height="wrap_content"
     android:gravity="center_vertical|center_horizontal"
