--- a/bestcardgameever-android/Branches/Yaniv For Android/res/layout/table.xml
+++ b/bestcardgameever-android/Branches/Yaniv For Android/res/layout/table.xml
@@ -33,22 +33,26 @@
 			android:layout_weight="8"/>
 			<LinearLayout android:id="@+id/topRow"
 				android:layout_height="wrap_content"
-				android:layout_width="wrap_content" android:layout_gravity="right"
+				android:layout_width="wrap_content" android:layout_gravity="center"
 				android:layout_weight="92" android:weightSum="100" >
 				<ImageView android:id="@+id/o2c1" android:layout_width="0px"
-					android:layout_height="fill_parent"	android:layout_weight="20" >
+					android:layout_height="fill_parent"	android:layout_weight="20"
+					android:layout_marginRight="-60dip" >
 				</ImageView>
 				<ImageView android:id="@+id/o2c2" android:layout_width="0px"
-					android:layout_height="fill_parent" android:layout_weight="20">
+					android:layout_height="fill_parent" android:layout_weight="20"
+					android:layout_marginRight="-60dip">
 				</ImageView>
 				<ImageView android:id="@+id/o2c3" android:layout_width="0px"
 					android:layout_height="fill_parent" android:layout_weight="20">
 				</ImageView>
 				<ImageView android:id="@+id/o2c4" android:layout_width="0px"
-					android:layout_height="fill_parent" android:layout_weight="20">
+					android:layout_height="fill_parent" android:layout_weight="20"
+					android:layout_marginLeft="-60dip">
 				</ImageView>
 				<ImageView android:id="@+id/o2c5" android:layout_width="0px"
-					android:layout_height="fill_parent" android:layout_weight="20">
+					android:layout_height="fill_parent" android:layout_weight="20"
+					android:layout_marginLeft="-60dip">
 				</ImageView>
 			</LinearLayout>
 		</LinearLayout>
@@ -66,28 +70,28 @@
 				android:layout_gravity="center" android:weightSum="100" >
 				<TextView android:id="@+id/o1Name" android:layout_width="wrap_content"
 					android:layout_height="0px" android:text="@string/Opponent1"
-					android:layout_gravity="top" android:layout_weight="5"
+					android:layout_gravity="top" android:layout_weight="10"
 					android:layout_marginBottom="2dip"/>
 
 				<ImageView android:id="@+id/o1c1" android:layout_width="fill_parent"
 					android:layout_height="0px"
-					android:layout_weight="19">
+					android:layout_weight="18">
 				</ImageView>
 				<ImageView android:id="@+id/o1c2" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-30px"
-					android:layout_weight="19">
+					android:layout_height="0px" android:layout_marginTop="-20dip"
+					android:layout_weight="18">
 				</ImageView>
 				<ImageView android:id="@+id/o1c3" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-30px"
-					android:layout_weight="19">
+					android:layout_height="0px" android:layout_marginTop="-20dip"
+					android:layout_weight="18">
 				</ImageView>
 				<ImageView android:id="@+id/o1c4" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-30px"
-					android:layout_weight="19">
+					android:layout_height="0px" android:layout_marginTop="-20dip"
+					android:layout_weight="18">
 				</ImageView>
 				<ImageView android:id="@+id/o1c5" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-30px"
-					android:layout_weight="19">
+					android:layout_height="0px" android:layout_marginTop="-20dip"
+					android:layout_weight="18">
 				</ImageView>
 
 
@@ -161,27 +165,27 @@
 				<TextView android:id="@+id/o3Name" android:layout_width="wrap_content"
 					android:layout_height="0px" android:text="@string/Opponent3"
 					android:layout_gravity="top" 
-					android:layout_weight="5"
+					android:layout_weight="10"
 					android:layout_marginBottom="2dip"/>
 				<ImageView android:id="@+id/o3c1" android:layout_width="fill_parent"
 					android:layout_height="0px"
-					android:layout_weight="19">
+					android:layout_weight="18">
 				</ImageView>
 				<ImageView android:id="@+id/o3c2" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-30px"
-					android:layout_weight="19">
+					android:layout_height="0px" android:layout_marginTop="-20dip"
+					android:layout_weight="18">
 				</ImageView>
 				<ImageView android:id="@+id/o3c3" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-30px"
-					android:layout_weight="19">
+					android:layout_height="0px" android:layout_marginTop="-20dip"
+					android:layout_weight="18">
 				</ImageView>
 				<ImageView android:id="@+id/o3c4" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-30px"
-					android:layout_weight="19">
+					android:layout_height="0px" android:layout_marginTop="-20dip"
+					android:layout_weight="18">
 				</ImageView>
 				<ImageView android:id="@+id/o3c5" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-30px"
-					android:layout_weight="19">
+					android:layout_height="0px" android:layout_marginTop="-20dip"
+					android:layout_weight="18">
 				</ImageView>
 			</LinearLayout>
 		</LinearLayout>
