--- a/bestcardgameever-android/Branches/Yaniv For Android/res/layout/table.xml
+++ b/bestcardgameever-android/Branches/Yaniv For Android/res/layout/table.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	android:weightSum="100" android:orientation="vertical" android:id="@+id/table"
+	android:id="@+id/table"
 	>
 	<!-- Top marquee -->
-	<LinearLayout android:background="#000000"
-		android:layout_height="wrap_content" android:layout_width="fill_parent"
-		android:layout_weight="6.0" android:id="@+id/heading">
+	<LinearLayout android:background="@android:color/background_dark"
+		android:id="@+id/heading"
+		android:layout_height="30dp" android:layout_width="fill_parent"
+		>
 		<TextView android:id="@+id/headingText" android:text="@string/Heading"
-			android:textColor="#ffffff" android:layout_height="fill_parent"
+			android:textColor="@android:color/white" android:layout_height="fill_parent"
 			android:layout_width="fill_parent" android:ellipsize="marquee"
 			android:singleLine="true" android:scrollHorizontally="true"
 			android:marqueeRepeatLimit="marquee_forever" android:focusable="true"
@@ -16,140 +17,199 @@
 	</LinearLayout>
 
 	<!-- Table Container -->
-	<LinearLayout android:background="@drawable/risingtree"
-		android:layout_height="wrap_content" android:orientation="vertical"
-		android:layout_weight="94.0" android:weightSum="100.0"
+	<RelativeLayout 
+	   	android:layout_below="@id/heading"
+	    android:background="@drawable/risingtree"
+		android:layout_height="fill_parent" 
 		android:layout_width="fill_parent">
-
+		
 		<!-- Top Opponent -->
-		<LinearLayout android:layout_width="fill_parent"
-			android:layout_height="0px" android:layout_weight="18" 
-			android:padding="1dip" android:orientation="vertical"
-			android:layout_gravity="center_horizontal"
-			android:weightSum="100">
-			<TextView android:id="@+id/o2Name" 
-			android:layout_height="wrap_content" android:text="@string/Opponent2" 
-			android:layout_gravity="center" android:layout_width="wrap_content"
-			android:layout_weight="8"/>
-			<LinearLayout android:id="@+id/topRow"
-				android:layout_height="wrap_content"
-				android:layout_width="wrap_content" android:layout_gravity="center"
-				android:layout_weight="92" android:weightSum="100" >
-				<ImageView android:id="@+id/o2c1" android:layout_width="0px"
-					android:layout_height="fill_parent"	android:layout_weight="20"
-					android:layout_marginRight="-60dip" >
-				</ImageView>
-				<ImageView android:id="@+id/o2c2" android:layout_width="0px"
-					android:layout_height="fill_parent" android:layout_weight="20"
-					android:layout_marginRight="-60dip">
-				</ImageView>
-				<ImageView android:id="@+id/o2c3" android:layout_width="0px"
-					android:layout_height="fill_parent" android:layout_weight="20">
-				</ImageView>
-				<ImageView android:id="@+id/o2c4" android:layout_width="0px"
-					android:layout_height="fill_parent" android:layout_weight="20"
-					android:layout_marginLeft="-60dip">
-				</ImageView>
-				<ImageView android:id="@+id/o2c5" android:layout_width="0px"
-					android:layout_height="fill_parent" android:layout_weight="20"
-					android:layout_marginLeft="-60dip">
-				</ImageView>
-			</LinearLayout>
-		</LinearLayout>
 
-		<!-- Mid-section -->
-		<LinearLayout 
+        <LinearLayout
+            android:id="@+id/topOpponent"
+            android:layout_width="fill_parent"
+            android:layout_height="90dp"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical"
+            android:padding="1dip" >
+
+            <TextView
+                android:id="@+id/o2Name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/Opponent2" />
+
+            <LinearLayout
+                android:id="@+id/topRow"
+                android:layout_width="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_height="80dp"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp" >
+
+                <ImageView
+                    android:id="@+id/o2c1"
+                    android:layout_width="40dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/back" >
+                </ImageView>
+
+                <ImageView
+                    android:id="@+id/o2c2"
+                    android:layout_width="40dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/back"
+                     >
+                </ImageView>
+
+                <ImageView
+                    android:id="@+id/o2c3"
+                    android:layout_width="40dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/back"
+                     >
+                </ImageView>
+
+                <ImageView
+                    android:id="@+id/o2c4"
+                    android:layout_width="40dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/back" 
+                    >
+                </ImageView>
+
+                <ImageView
+                    android:id="@+id/o2c5"
+                    android:layout_width="40dp"
+                    android:layout_height="60dp"
+                    android:src="@drawable/back"
+                     >
+                </ImageView>
+            </LinearLayout>
+        </LinearLayout>
+<!-- Mid-section -->
+		<RelativeLayout
+		    android:id="@+id/middleSection" 
 			android:layout_width="fill_parent" android:orientation="horizontal"
-			android:weightSum="100" android:layout_height="0px"
-			android:layout_weight="52">
+		    android:layout_below="@+id/topOpponent"
+			android:layout_height="200dp"
+			android:baselineAligned="false">
+            
 			<!-- left opponent -->
 			<LinearLayout android:id="@+id/leftCol"
 				android:orientation="vertical" 
-				android:layout_height="fill_parent" android:layout_weight="17.5"
-				android:layout_width="0px" android:padding="4dip"
-				android:layout_gravity="center" android:weightSum="100" >
+				android:layout_height="fill_parent" 
+				android:layout_width="50dp" android:padding="4dip"
+				android:layout_gravity="center"
+				android:layout_alignParentLeft="true" >
 				<TextView android:id="@+id/o1Name" android:layout_width="wrap_content"
-					android:layout_height="0px" android:text="@string/Opponent1"
-					android:layout_gravity="top" android:layout_weight="10"
+					android:layout_height="wrap_content"
+					android:text="@string/Opponent1"
+					android:layout_gravity="top|center_horizontal"
 					android:layout_marginBottom="2dip"/>
 
-				<ImageView android:id="@+id/o1c1" android:layout_width="fill_parent"
-					android:layout_height="0px"
-					android:layout_weight="18">
-				</ImageView>
-				<ImageView android:id="@+id/o1c2" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-20dip"
-					android:layout_weight="18">
-				</ImageView>
-				<ImageView android:id="@+id/o1c3" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-20dip"
-					android:layout_weight="18">
-				</ImageView>
-				<ImageView android:id="@+id/o1c4" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-20dip"
-					android:layout_weight="18">
-				</ImageView>
-				<ImageView android:id="@+id/o1c5" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-20dip"
-					android:layout_weight="18">
-				</ImageView>
+				<ImageView android:id="@+id/o1c1"
+				    android:layout_width="fill_parent"
+					android:layout_height="60dp"
+					android:src="@drawable/back"
+					/>
+				<ImageView android:id="@+id/o1c2" 
+				        android:layout_width="fill_parent"
+					android:layout_height="60dp"
+					android:src="@drawable/back"
+					android:layout_marginTop="-30dp"
+					
+				/>
+				<ImageView android:id="@+id/o1c3"     android:layout_width="fill_parent"
+					android:layout_height="60dp"
+					android:src="@drawable/back"
+					android:layout_marginTop="-30dp"
+				/>
+				<ImageView android:id="@+id/o1c4"     android:layout_width="fill_parent"
+					android:layout_height="60dp"
+					android:src="@drawable/back"
+					android:layout_marginTop="-30dp"
+				/>
+				<ImageView android:id="@+id/o1c5"     android:layout_width="fill_parent"
+					android:layout_height="60dp"
+					android:src="@drawable/back"
+					android:layout_marginTop="-30dp"
+				/>
 
 
 			</LinearLayout>
 			<!-- Deck and discarded + action buttons -->
-			<LinearLayout android:id="@+id/center"
-				android:layout_height="fill_parent"
-				android:orientation="vertical" android:layout_weight="65"
-				android:weightSum = "100"
-				android:layout_width="0px">
+
+			<LinearLayout
+			    android:id="@+id/center"
+			    android:layout_width="fill_parent"
+			    android:layout_height="fill_parent"
+			    android:layout_toLeftOf="@+id/rightCol"
+			    android:layout_toRightOf="@+id/leftCol"
+			    android:orientation="vertical" >
 				
-				<LinearLayout android:layout_height="0px" android:layout_width="fill_parent" 
-				android:layout_weight="50" android:weightSum = "100">
+			    <!-- Deck + action buttons -->
+				<RelativeLayout android:layout_height="fill_parent" android:layout_width="fill_parent"
+				android:layout_weight="1" >
 				
-				<ImageView android:id="@+id/deck" android:layout_width="0px"
-					android:layout_height="fill_parent" android:src="@drawable/deck"
-					android:padding="10px"
-					android:layout_weight="50" />
-					<LinearLayout android:id="@+id/ActionButtonContainer"
-						android:clipChildren="true" 
-						android:layout_gravity="center" android:layout_width="0px"
-						android:orientation="vertical" android:layout_height="fill_parent"
-						android:layout_weight="50" >
+					<ImageView android:id="@+id/deck" 
+					    android:layout_width="70dp" android:layout_height="wrap_content"
+					     android:src="@drawable/deck"
+						android:padding="5dp"
+						android:layout_alignParentLeft="true" />
+
+					<LinearLayout
+					    android:id="@+id/ActionButtonContainer"
+					    android:layout_width="70dp"
+					    android:layout_height="fill_parent"
+					    android:layout_alignParentRight="true"
+					    android:layout_gravity="center"
+					    android:layout_toRightOf="@+id/deck"
+					    android:clipChildren="true"
+					    android:orientation="vertical" >
+
 						<Button android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:text="@string/PerformYaniv"
 							android:id="@+id/PerformYaniv" 
-							android:layout_gravity="center" android:layout_margin="5dip"
-							style="@style/MyRedButton">
-						</Button>
+							android:layout_gravity="center"
+							android:layout_margin="5dip"
+							style="@style/MyRedButton"/>
 						<Button android:layout_width="wrap_content"
 							android:layout_height="wrap_content"
 							android:id="@+id/NextPlayer"
 							android:text="@string/NextPlayer"
 							android:layout_gravity="center"
-							android:layout_margin="9dip"></Button>
+							android:layout_margin="9dip"/>
 					</LinearLayout>
-				</LinearLayout>
-
+				</RelativeLayout>
+				
+				<!-- Discarded cards -->
 				<LinearLayout android:id="@+id/cardsThrown"
-					android:layout_height="0px" android:layout_width="fill_parent"
-					android:layout_weight="50"
-					android:padding="5px">
+					android:layout_height="fill_parent" android:layout_width="fill_parent"
+					android:layout_weight="1"
+					android:padding="2dp">
 
-					<ImageView android:layout_width="72px"
-						android:layout_height="96px" android:id="@+id/card5" />
-					<ImageView android:layout_width="72px"
-						android:layout_height="96px" android:id="@+id/card4"
-						android:layout_marginLeft="-60px" />
-					<ImageView android:layout_width="72px"
-						android:layout_height="96px" android:id="@+id/card3"
-						android:layout_marginLeft="-60px" />
-					<ImageView android:layout_width="72px"
-						android:layout_height="96px" android:id="@+id/card2"
-						android:layout_marginLeft="-60px" />
-					<ImageView android:layout_width="72px"
-						android:layout_height="96px" android:id="@+id/card1"
-						android:layout_marginLeft="-60px" />
+					<ImageView android:layout_width="65dp"
+						android:layout_height="90dp" android:id="@+id/card5"
+						android:src="@drawable/r_o" />
+					<ImageView android:layout_width="65dp"
+						android:layout_height="90dp" android:id="@+id/card4"
+						android:src="@drawable/b_o"
+						android:layout_marginLeft="-30dp" />
+					<ImageView android:layout_width="65dp"
+						android:layout_height="90dp" android:id="@+id/card3"
+						android:src="@drawable/r_o"
+						android:layout_marginLeft="-30dp" />
+					<ImageView android:layout_width="65dp"
+						android:layout_height="90dp" android:id="@+id/card2"
+						android:src="@drawable/b_o"
+						android:layout_marginLeft="-30dp" />
+					<ImageView android:layout_width="65dp"
+						android:layout_height="90dp" android:id="@+id/card1"
+						android:src="@drawable/r_o"
+						android:layout_marginLeft="-30dp" />
 
 
 				</LinearLayout>
@@ -158,75 +218,90 @@
 			<!-- right opponent -->
 			<LinearLayout android:id="@+id/rightCol"
 				android:orientation="vertical" 
-				android:layout_height="fill_parent" android:layout_weight="17.5"
-				android:layout_width="0px" android:padding="4dip"
+				android:layout_height="fill_parent" 
+				android:layout_width="50dp" android:padding="4dip"
 				android:layout_gravity="center"
-				android:weightSum="100">
+				android:layout_alignParentRight="true"
+				>
 				<TextView android:id="@+id/o3Name" android:layout_width="wrap_content"
-					android:layout_height="0px" android:text="@string/Opponent3"
-					android:layout_gravity="top" 
-					android:layout_weight="10"
+					android:layout_height="wrap_content" android:text="@string/Opponent3"
+					android:layout_gravity="top|center_horizontal" 
 					android:layout_marginBottom="2dip"/>
 				<ImageView android:id="@+id/o3c1" android:layout_width="fill_parent"
-					android:layout_height="0px"
-					android:layout_weight="18">
-				</ImageView>
+					android:layout_height="60dp"
+					android:src="@drawable/back"
+					/>
 				<ImageView android:id="@+id/o3c2" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-20dip"
-					android:layout_weight="18">
-				</ImageView>
+					android:layout_height="60dp"
+					android:src="@drawable/back"
+					android:layout_marginTop="-30dp"
+					/>
 				<ImageView android:id="@+id/o3c3" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-20dip"
-					android:layout_weight="18">
-				</ImageView>
+					android:layout_height="60dp"
+					android:src="@drawable/back"
+					android:layout_marginTop="-30dp"
+					/>
 				<ImageView android:id="@+id/o3c4" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-20dip"
-					android:layout_weight="18">
-				</ImageView>
+					android:layout_height="60dp"
+					android:src="@drawable/back"
+					android:layout_marginTop="-30dp"
+					/>
 				<ImageView android:id="@+id/o3c5" android:layout_width="fill_parent"
-					android:layout_height="0px" android:layout_marginTop="-20dip"
-					android:layout_weight="18">
-				</ImageView>
+					android:layout_height="60dp"
+					android:src="@drawable/back"
+					android:layout_marginTop="-30dp"
+					/>
 			</LinearLayout>
-		</LinearLayout>
+		</RelativeLayout>
 
 		<!-- Bottom Player -->
 		<LinearLayout android:id="@+id/bottom"
 			android:layout_width="fill_parent"
-			android:orientation="vertical" android:weightSum="100"
-			android:layout_weight="30" android:layout_height="0px">
+			android:layout_height="fill_parent"
+			android:layout_alignParentBottom="true"
+			android:layout_below="@+id/middleSection"
+			android:orientation="vertical">
+			
 			<TextView android:id="@+id/p1Name" android:layout_width="wrap_content"
 				android:layout_height="wrap_content" android:text="@string/Player"
 				android:layout_gravity="center" 
-				android:layout_weight="7" />
+				/>
 
 			<LinearLayout android:id="@+id/p1cardscontainer"
-				android:layout_width="fill_parent"	android:layout_height="0px"
+				android:layout_width="fill_parent"	android:layout_height="fill_parent"
 				android:paddingLeft="2dip" android:paddingRight="2dip"  android:layout_gravity="center"
-				 android:layout_weight="93" android:weightSum="100">
+				 >
 						<ImageView android:id="@+id/p1c1"
-						 android:layout_height="fill_parent" android:layout_width="0px" android:layout_weight="20" 
+						 android:layout_height="fill_parent" android:layout_width="wrap_content"
+						 android:src="@drawable/c_1" 
 						 android:layout_gravity="bottom"
 							android:layout_margin="1dip">
 						</ImageView>
-						<ImageView android:id="@+id/p1c2" 
-						 android:layout_height="fill_parent" android:layout_width="0px" android:layout_weight="20" 
-						android:layout_gravity="bottom"
+						<ImageView android:id="@+id/p1c2"
+						 android:layout_height="fill_parent" android:layout_width="wrap_content"
+						 android:src="@drawable/c_2" 
+						 android:layout_gravity="bottom"
 							android:layout_margin="1dip">
 						</ImageView>
-						<ImageView android:id="@+id/p1c3" android:layout_gravity="bottom"
-								 android:layout_height="fill_parent" android:layout_width="0px" android:layout_weight="20" 
+						<ImageView android:id="@+id/p1c3" 
+						 android:layout_height="fill_parent" android:layout_width="wrap_content"
+						 android:src="@drawable/c_3" 
+						 android:layout_gravity="bottom"
 							android:layout_margin="1dip">
 						</ImageView>
-						<ImageView android:id="@+id/p1c4" android:layout_gravity="bottom"
-						android:layout_height="fill_parent" android:layout_width="0px" android:layout_weight="20" 
+						<ImageView android:id="@+id/p1c4"
+						 android:layout_height="fill_parent" android:layout_width="wrap_content"
+						 android:src="@drawable/c_4" 
+						 android:layout_gravity="bottom"
 							android:layout_margin="1dip">
 						</ImageView>
-						<ImageView android:id="@+id/p1c5"  android:layout_gravity="bottom"
-								 android:layout_height="fill_parent" android:layout_width="0px" android:layout_weight="20" 
+						<ImageView android:id="@+id/p1c5"  
+						 android:layout_height="fill_parent" android:layout_width="wrap_content"
+						 android:src="@drawable/c_5" 
+						 android:layout_gravity="bottom"
 							android:layout_margin="1dip">
 						</ImageView>
 			</LinearLayout>
 		</LinearLayout>
-	</LinearLayout>
-</LinearLayout>
+	</RelativeLayout>
+</RelativeLayout>
